setting up django

--- a/server/static/homepage_styles.css
+++ b/server/static/homepage_styles.css
@@ -85,7 +85,7 @@
 }
 
 .sectionmain{
-    background: url("main-section.jpg") no-repeat center;
+    background: url("/static/main-section.jpg") no-repeat center;
     background-size: cover;
     width: 100%;
 }
