--- a/server/templates/payment-gateway.html
+++ b/server/templates/payment-gateway.html
@@ -99,7 +99,7 @@
 
                     <!-- Submit Button -->
                     <div class="text-center">
-                        <a class="submit-btn mt-4" href="payment.html">Submit</a>
+                        <a class="submit-btn mt-4" href="{% url 'payment' %}">Submit</a>
                     </div>
                 </form>
             </div>
