--- a/server/templates/payment.html
+++ b/server/templates/payment.html
@@ -52,7 +52,7 @@
             <p>Your ticket has been successfully booked. We hope you have a great journey!</p>
             <p>Booking Reference: <strong>#12345678</strong></p>
             <p>Thank you for choosing Nomad Nexus.</p>
-            <a href="homepage.html" class="home-button">Back to Home</a>
+            <a href="{% url 'home' %}" class="home-button">Back to Home</a>
         </div>
     </div>
 
