--- a/server/templates/flights.html
+++ b/server/templates/flights.html
@@ -44,15 +44,27 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 items-edit">
-                    <li class="nav-item"><a class="nav-link" href="homepage.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="flights.html">Flights</a></li>
-                    <li class="nav-item"><a class="nav-link" href="trains.html">Trains</a></li>
-                    <li class="nav-item"><a class="nav-link" href="buses.html">Buses</a></li>
-                    <li class="nav-item"><a class="nav-link" href="itenary.html">Itinerary</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}" id="Home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link flights" aria-current="page" href="{% url 'flights' %}" id="Flight">Flights</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link trains" aria-current="page" href="{% url 'trains' %}" id="Train">Trains</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buses" aria-current="page" href="{% url 'buses' %}" id="Bus">Buses</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-2" aria-current="page" href="{% url 'itenary' %}" id="Itinerary">Itinerary</a>
+                    </li>
                 </ul>
             </div>
         </div>
-        <a href="login.html" class="login-button">Login</a>
+
+        <a href="{% url 'login' %}" class="login-button">Login</a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -101,7 +113,7 @@
                 </a>
                 <div class="collapse" id="flight1Details">
                     <div class="d-flex justify-content-center">
-                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
+                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
                     </div>
                 </div>
 
@@ -114,7 +126,7 @@
                 </a>
                 <div class="collapse" id="flight2Details">
                     <div class="d-flex justify-content-center">
-                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
+                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
                     </div>
                 </div>
 
@@ -127,7 +139,7 @@
                 </a>
                 <div class="collapse" id="flight3Details">
                     <div class="d-flex justify-content-center">
-                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
+                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
                     </div>
                 </div>
 
@@ -140,7 +152,7 @@
                 </a>
                 <div class="collapse" id="flight4Details">
                     <div class="d-flex justify-content-center">
-                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
+                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
                     </div>
                 </div>
 
@@ -153,7 +165,7 @@
                 </a>
                 <div class="collapse" id="flight5Details">
                     <div class="d-flex justify-content-center">
-                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
+                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
                     </div>
                 </div>
             </div>
