--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -17,7 +17,7 @@
 <!-- navbar start -->
 <nav class="navbar navbar-expand-md fixed-top edit-navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand me-auto" href="homepage.html"><img src="LOGO.jpeg" class="logo-edit"></a>
+        <a class="navbar-brand me-auto" href="{% url 'home' %}"><img src="{% static 'LOGO.jpeg' %}" class="logo-edit"></a>
 
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel" style="background-color: #1a1d1d;">
@@ -31,22 +31,26 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}" id="Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link flights" aria-current="page" href="flights.html" id="Flight">Flights</a>
+                        <a class="nav-link flights" aria-current="page" href="{% url 'flights' %}" id="Flight">Flights</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link trains" aria-current="page" href="trains.html" id="Train">Trains</a>
+                        <a class="nav-link trains" aria-current="page" href="{% url 'trains' %}" id="Train">Trains</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link buses" aria-current="page" href="buses.html" id="Bus">Buses</a>
+                        <a class="nav-link buses" aria-current="page" href="{% url 'buses' %}" id="Bus">Buses</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-2" aria-current="page" href="itenary.html" id="Itinerary">Itinerary</a>
+                        <a class="nav-link mx-lg-2" aria-current="page" href="{% url 'itenary' %}" id="Itinerary">Itinerary</a>
                     </li>
                 </ul>
             </div>
         </div>
-
-        <a href="login.html" class="login-button">Login</a>
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}" class="login-button">{{ username }}</a>
+        {% else %}
+        <a href="{% url 'login' %}" class="login-button">Login</a>
+        {% endif %}
+        
 
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
