--- a/server/templates/trains.html
+++ b/server/templates/trains.html
@@ -42,15 +42,27 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 items-edit">
-                        <li class="nav-item"><a class="nav-link" href="homepage.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="flights.html">Flights</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="trains.html">Trains</a></li>
-                        <li class="nav-item"><a class="nav-link" href="buses.html">Buses</a></li>
-                        <li class="nav-item"><a class="nav-link" href="itenary.html">Itinerary</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'home' %}" id="Home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link flights" aria-current="page" href="{% url 'flights' %}" id="Flight">Flights</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link trains" aria-current="page" href="{% url 'trains' %}" id="Train">Trains</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link buses" aria-current="page" href="{% url 'buses' %}" id="Bus">Buses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link mx-lg-2" aria-current="page" href="{% url 'itenary' %}" id="Itinerary">Itinerary</a>
+                        </li>
                     </ul>
                 </div>
             </div>
-            <a href="login.html" class="login-button">Login</a>
+    
+            <a href="{% url 'login' %}" class="login-button">Login</a>
+    
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -103,7 +115,7 @@
                 </a>
                 <div class="collapse" id="train1Details">
                     <div class="d-flex justify-content-center">
-                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a> <!-- Book button is now inside collapse -->
+                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a> <!-- Book button is now inside collapse -->
                     </div>
                 </div>
 
@@ -117,7 +129,7 @@
                 </a>
                 <div class="collapse" id="train2Details">
                     <div class="d-flex justify-content-center">
-                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
+                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
                     </div>
                 </div>
 
@@ -131,7 +143,7 @@
                 </a>
                 <div class="collapse" id="train3Details">
                     <div class="d-flex justify-content-center">
-                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
+                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
                     </div>
                 </div>
 
