--- a/server/templates/trains.html
+++ b/server/templates/trains.html
@@ -143,7 +143,7 @@
                 </a>
                 <div class="collapse" id="train3Details">
                     <div class="d-flex justify-content-center">
-                        <a href="{% url 'payment_gateway' %}" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
+                        <a href="payment-gateway.html" class="btn btn-primary book-btn mt-2 mb-2">Book</a>
                     </div>
                 </div>
 
